--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/og": "^0.5.4",
     "autoprefixer": "10.4.14",
     "next": "13.4.2",
     "postcss": "8.4.23",
